--- a/views/index.jade
+++ b/views/index.jade
@@ -7,8 +7,16 @@ block content
   .row
     ul#breadcrumbs.breadcrumb.span12
 
+  .row
+    #database-list.span12
+
+  script#database-list-template(type="text/backbone")
+    <td><a href = '#'><%=name%></a></td>
+    <td><button class="btn btn-info">Click Me</button></td>
+
   script(src="/javascripts/congo/congo.js")
   script(src="/javascripts/congo/nav.js")
+  script(src="/javascripts/congo/database.js")
 
   script
     $(function(){
